--- a/TicTacDoh/app/build.gradle
+++ b/TicTacDoh/app/build.gradle
@@ -3,9 +3,13 @@ apply plugin: 'com.android.application'
 android {
     signingConfigs {
         config {
+        storeFile file('C:\\Users\\Joe\\Documents\\WillyShmo\\KeyStore\\KeyStore.jks')
+            storePassword 'pushkey609'
+            keyAlias = 'pushkey609'
+            keyPassword 'pushkey609'
         }
     }
-    compileSdkVersion 27
+    compileSdkVersion 28
     //buildToolsVersion "28-rc2"
     dexOptions {
         //incremental = true;
@@ -13,11 +17,11 @@ android {
         //   javaMaxHeapSize "4g"
     }
     defaultConfig {
-        applicationId "com.guzzardo.android.willyshmo.tictactoe3"
+        applicationId "com.guzzardo.android.willyshmo.tictactoe4"
         minSdkVersion 15
-        targetSdkVersion 27
-        versionCode 1
-        versionName "1.1"
+        targetSdkVersion 28
+        versionCode 4
+        versionName "3.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
@@ -26,10 +30,11 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             zipAlignEnabled true
-            versionNameSuffix '04.04'
+            versionNameSuffix '05.02'
+            signingConfig signingConfigs.config
         }
     }
-    buildToolsVersion '28.0.0 rc2'
+    //buildToolsVersion '28.0.3'
     dexOptions {
         //incremental true
         javaMaxHeapSize "4g"
@@ -48,7 +53,10 @@ dependencies {
     //implementation 'com.google.firebase:firebase-ads:11.8.0'
     //implementation 'com.google.firebase:firebase-ads:11.8.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+
+
+    //androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
     //androidTestImplementation 'com.android.support.test:runner:27.1.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     //androidTestImplementation 'com.android.support.test.espresso:espresso-core:27.1.1'
@@ -59,15 +67,15 @@ dependencies {
     //implementation 'com.google.android.gms:play-services-ads:8.4.0'
     //implementation 'com.android.support:design:26.1.0'
     //implementation 'com.android.support:design:27.1.0'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     //won't build without it but get redundant jar error at runtime.
-    implementation 'com.android.support:support-fragment:27.1.1'
-    implementation 'com.android.support:support-compat:27.1.1'
-    implementation 'com.android.support:support-core-utils:27.1.1'
-    implementation 'com.android.support:support-core-ui:27.1.1'
-    implementation 'com.android.support:support-media-compat:27.1.1'
-    implementation 'com.android.support:customtabs:27.1.1'
-    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:support-fragment:28.0.0'
+    implementation 'com.android.support:support-compat:28.0.0'
+    implementation 'com.android.support:support-core-utils:28.0.0'
+    implementation 'com.android.support:support-core-ui:28.0.0'
+    implementation 'com.android.support:support-media-compat:28.0.0'
+    implementation 'com.android.support:customtabs:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.google.firebase:firebase-core:15.0.2'
     implementation 'com.google.firebase:firebase-appindexing:15.0.1'
     implementation 'com.android.support:multidex:1.0.3'
