--- a/TicTacDoh/app/build.gradle
+++ b/TicTacDoh/app/build.gradle
@@ -22,7 +22,7 @@ android {
         targetSdkVersion 28
         versionCode 4
         versionName "3.1"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
     buildTypes {
@@ -58,7 +58,7 @@ dependencies {
     //androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'androidx.test:runner:1.1.0'
     //androidTestImplementation 'com.android.support.test:runner:27.1.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     //androidTestImplementation 'com.android.support.test.espresso:espresso-core:27.1.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
@@ -67,18 +67,18 @@ dependencies {
     //implementation 'com.google.android.gms:play-services-ads:8.4.0'
     //implementation 'com.android.support:design:26.1.0'
     //implementation 'com.android.support:design:27.1.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     //won't build without it but get redundant jar error at runtime.
-    implementation 'com.android.support:support-fragment:28.0.0'
-    implementation 'com.android.support:support-compat:28.0.0'
-    implementation 'com.android.support:support-core-utils:28.0.0'
-    implementation 'com.android.support:support-core-ui:28.0.0'
-    implementation 'com.android.support:support-media-compat:28.0.0'
-    implementation 'com.android.support:customtabs:28.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'androidx.fragment:fragment:1.0.0'
+    implementation 'androidx.core:core:1.0.0'
+    implementation 'androidx.legacy:legacy-support-core-utils:1.0.0'
+    implementation 'androidx.legacy:legacy-support-core-ui:1.0.0'
+    implementation 'androidx.media:media:1.0.0'
+    implementation 'androidx.browser:browser:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-core:15.0.2'
     implementation 'com.google.firebase:firebase-appindexing:15.0.1'
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'androidx.multidex:multidex:2.0.0'
     //implementation 'com.google.firebase:firebase-appindexing:16.0.0'
     //implementation 'com.google.firebase:firebase-ads:16.0.0'
     //implementation 'com.google.firebase:firebase-analytics:16.0.0'
