--- a/TicTacDoh/app/src/main/AndroidManifest.xml
+++ b/TicTacDoh/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@ android:versionName="5.5" >
     android:allowBackup="true"
     android:icon="@drawable/icon"
     android:label="@string/app_name"
+    android:theme="@style/Theme.AppCompat.Light"
     android:screenOrientation="landscape" >
 
     <!-- android:debuggable="true" -->
