--- a/TicTacDoh/app/build.gradle
+++ b/TicTacDoh/app/build.gradle
@@ -62,7 +62,6 @@ dependencies {
     //androidTestImplementation 'com.android.support.test.espresso:espresso-core:27.1.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
-    implementation files('libs/rabbitmq-client.jar')
     //implementation 'com.google.android.gms:play-services-location:8.4.0'
     //implementation 'com.google.android.gms:play-services-ads:8.4.0'
     //implementation 'com.android.support:design:26.1.0'
@@ -82,8 +81,14 @@ dependencies {
     //implementation 'com.google.firebase:firebase-appindexing:16.0.0'
     //implementation 'com.google.firebase:firebase-ads:16.0.0'
     //implementation 'com.google.firebase:firebase-analytics:16.0.0'
-    implementation project(':license')
+    implementation files('libs/rabbitmq-client.jar')
+    implementation files('libs/jackson-annotations-2.11.0.jar')
+    implementation files('libs/jackson-core-2.11.0.jar')
+    implementation files('libs/jackson-databind-2.11.0.jar')
+
     //implementation 'com.google.android.gms:play-services:12.0.1'
+    implementation project(':license')
+
 }
 
 apply plugin: 'com.google.gms.google-services'
